[gd_scene load_steps=3 format=3 uid="uid://d3nxb30m3wlvs"]

[ext_resource type="Script" path="res://src/DecalConfig.gd" id="1_6jtgf"]
[ext_resource type="Script" path="res://src/DecalTypePreview.gd" id="2_rbcmn"]

[node name="DecalConfig" type="Control" groups=["DecalConfig"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jtgf")

[node name="ClickBlocker" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.752941)

[node name="UI" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_right = -13.0
dragger_visibility = 2

[node name="Images" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="UI/Images"]
layout_mode = 2
text = "
Flat Mat Configurator
"

[node name="SideL" type="Label" parent="UI/Images"]
layout_mode = 2
text = "Base texture:"

[node name="Texture2D" type="TextureRect" parent="UI/Images"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
expand_mode = 4
stretch_mode = 6

[node name="Config" type="GridContainer" parent="UI/Images"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="UI/Images/Config"]
layout_mode = 2
text = "Tile X Size"

[node name="XSize" type="SpinBox" parent="UI/Images/Config"]
layout_mode = 2
min_value = 1.0
max_value = 1024.0
value = 16.0
exp_edit = true
rounded = true

[node name="Label2" type="Label" parent="UI/Images/Config"]
layout_mode = 2
text = "Tile Y Size"

[node name="YSize" type="SpinBox" parent="UI/Images/Config"]
layout_mode = 2
min_value = 1.0
max_value = 1024.0
value = 16.0
exp_edit = true
rounded = true

[node name="Label3" type="Label" parent="UI/Images"]
layout_mode = 2
text = "Click anywhere on the preview to set the given tile as the thumbnail icon for use in the material list at the bottom of the main editor window."
autowrap_mode = 2

[node name="Done" type="Button" parent="UI/Images"]
layout_mode = 2
text = "Done"

[node name="Control" type="Control" parent="UI/Images"]
layout_mode = 2
size_flags_vertical = 3

[node name="Cancel" type="Button" parent="UI/Images"]
layout_mode = 2
text = "Cancel"

[node name="Control2" type="Control" parent="UI/Images"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="DecalTypePreview" type="Control" parent="UI"]
layout_mode = 2
script = ExtResource("2_rbcmn")
